Fixed the reference paths, how to contribute URL

--- a/contributing/CONTRIBUTING.html
+++ b/contributing/CONTRIBUTING.html
@@ -88,12 +88,9 @@ code contributions, and more.</p>
 <p><a name="contact"></a></p>
 <h2 id="not-sure-how-to-start-contributing">Not sure how to start contributing?</h2>
 <p>If you are worried or don't know where to start,
-you can reach out with questions to anyone from the
-Project Victor team on</p>
+you can reach out with questions to</p>
 <ul>
-<li><a href="https://forums.anki.com/"><strong>Official Anki developer forums</strong></a></li>
-<li><a href="https://discord.gg/FT8EYwu"><strong>Anki robots Discord chat</strong></a></li>
-<li>[<strong>GitHub Discussions</strong>][9]
+<li><a href="https://github.com/randym32/Blackwood.IO/discussions"><strong>GitHub Discussions</strong></a>
 is directly integrated with the repository.  You can use this to ask for help
 or share ideas related to improving the documentation or deploying it.</li>
 </ul>
@@ -141,7 +138,6 @@ separately from your code changes.</p>
 <p>Please see the <a href="pull-requests.html">pull requests page</a> for the process of
 submitting your changes to the prooject and incorporating feedback.
 are happy with your changes first!</p>
-<p>[9]: <a href="https://github.com/digital-dream-labs/api/discussions">https://github.com/digital-dream-labs/api/discussions</a>)</p>
 <p><em>Credits: This page was adapted from an <a href="https://github.com/embeddedartistry/embedded-resources/blob/master/docs/CODE_OF_CONDUCT_template.md">EmbeddedArtistry template</a></em></p>
 </article>
           </div>
@@ -151,7 +147,7 @@ are happy with your changes first!</p>
               <div class="contribution">
                 <ul class="nav">
                   <li>
-                    <a href="https://github.com/randym32/Blackwood.IO/blob/main/Documentation/contributing/CONTRIBUTING.md/#L1" class="contribution-link">Improve this Doc</a>
+                    <a href="https://github.com/randym32/Blackwood.IO/blob/gh-pages/Documentation/contributing/CONTRIBUTING.md/#L1" class="contribution-link">Improve this Doc</a>
                   </li>
                 </ul>
               </div>
