--- a/glossary.html
+++ b/glossary.html
@@ -78,7 +78,7 @@
 : The name of the current application, typically derived from the entry assembly name. Used by the <code>Application.Name</code> property to identify the running application.</p>
 <h2 id="b">B</h2>
 <p><strong>Background Save</strong>
-: A file saving mechanism that prevents UI blocking.  Implemented by the <code>Util.SaveBackground</code> method.</p>
+: A file saving mechanism that prevents UI blocking.  Implemented by the <code>Util.Save</code> method.</p>
 <h2 id="c">C</h2>
 <p><strong>Cache</strong>
 : An in-memory storage mechanism that provides fast access to frequently used data.  The Blackwood.IO cache uses a LRU (Least Recently Used) eviction policy.</p>
