--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@ file-system tasks.</p>
 <h3 id="glossary">Glossary</h3>
 <p>For definitions of key terms and concepts used throughout this documentation, see the <a href="glossary.html">Glossary</a>.</p>
 <h2 id="contributing">Contributing</h2>
-<p>We welcome contributions! Please see our <a href="contributing/CONTRIBUTING.html">Contributing Guidelines</a> for information on how to contribute to this project.</p>
+<p>We welcome contributions! Please see our
+<a href="contributing/CONTRIBUTING.html">Contributing Guidelines</a> for information on how
+to contribute to this project.</p>
 <ul>
 <li><strong>Issues</strong>: Report bugs or request features on <a href="https://github.com/randym32/Blackwood.IO/issues">GitHub Issues</a></li>
 <li><strong>Pull Requests</strong>: Submit improvements via <a href="https://github.com/randym32/Blackwood.IO/pulls">GitHub Pull Requests</a></li>
