--- a/toc.html
+++ b/toc.html
@@ -23,6 +23,9 @@
                           <li>
                               <a href="building-docs.html" name="" title="Building the Documentation">Building the Documentation</a>
                           </li>
+                          <li>
+                              <a href="articles/examples.html" name="" title="Examples">Examples</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
